AppletQuickItem: Fix finding own attached layout

Regression from 344dbeb938

BUG: 358849
REVIEW: 127073