src/plasmaquick/appletquickitem.h
@@ -146,6 +146,7 @@ protected:
     KDeclarative::QmlObject *qmlObject();
 
     //Reimplementation
+    void childEvent(QChildEvent *event) Q_DECL_OVERRIDE;
     void geometryChanged(const QRectF &newGeometry, const QRectF &oldGeometry) Q_DECL_OVERRIDE;
     void itemChange(ItemChange change, const ItemChangeData &value) Q_DECL_OVERRIDE;
 
